--- a/public/styles.css
+++ b/public/styles.css
@@ -10,5 +10,42 @@ h3,
 h4,
 h5,
 h6 {
+  grid-column: content;
   font-family: "Titillium Web", sans-serif;
+}
+
+#fiddly .container {
+  display: grid;
+  grid-template-columns:
+    [full-start]
+    minmax(20px, 1fr)
+    [content-start]
+    minmax(0, 80ch)
+    [content-end]
+    minmax(20px, 1fr)
+    [full-end];
+  width: 100%;
+  max-width: initial;
+  margin: 0;
+}
+
+p,
+ul,
+ol,
+pre,
+hr,
+table,
+blockquote,
+details {
+  grid-column: content;
+}
+
+figure {
+  grid-column: full;
+}
+
+iframe {
+  grid-column: full;
+  width: 100%;
+  height: 800px;
 }
